1412 nytt vedtak-api som inneholder både tidslinje og alle vedtakene, med ny modell
